Checkpoint 48 Sharing Content: completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="menu_search">Search</string>
     <string name="menu_refresh">Refresh</string>
     <string name="menu_mark_as_read">Mark as read</string>
+    <string name="share_chooser_title">Share with…</string>
 </resources>
